--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>HomePage</title>
+	<meta charset="UTF-8">
+	<meta name="format-detection" content="telephone=no">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240531103947">
+	<link rel="shortcut icon" href="favicon.ico">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<style>
 		@keyframes start {
 			0% {
@@ -813,7 +816,7 @@
 				</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20240531102619"></script>
+	<script src="js/app.min.js?_v=20240531103947"></script>
 </body>
 
 </html>
